--- a/07-Options4.Rmd
+++ b/07-Options4.Rmd
@@ -6,11 +6,12 @@
 -   Put options can be used to hedge a farmers production risk
 -   Hedging with options is costly
 -   Farmer's hedge; putting on a fence
--   How crop insurance is like a (subsidized) put option
 
 **Check Your Understanding**
 
--   
+-   Why does a long put option protect from downside risk? 
+-   What are the options trades required to lock in a price range?
+-   Which of the strategies described in this chapter require one to maintain margin?
 
 ## Farmer Hedging Price Risk on Production with a Put Option
 
