--- a/10-FundamentalAnalysisand.Rmd
+++ b/10-FundamentalAnalysisand.Rmd
@@ -1,5 +1,7 @@
 # Balance Sheet Analysis
 
+<span style="color:red">Interested in more? Please let me know by</span> [taking the survey](https://forms.gle/Q3VByCQZHjfQSy9D7)! 
+
 **Highlights**
 
 -   Balance sheet analysis is the most important tool for fundamentals-based price forecasting.
