--- a/index.Rmd
+++ b/index.Rmd
@@ -23,6 +23,8 @@ download:
 
 ![](images/cover.png)
 
+<span style="color:red">Interested in more? Please let me know by</span> [taking the survey](https://forms.gle/Q3VByCQZHjfQSy9D7)! 
+
 This is a book for beginners who want to study commodity price analysis from a fundamental perspective. These chapters are derived from my lecture notes teaching ACE 427: Commodity Price Analysis at the University of Illinois, and then AGEC 421 at Purdue University. The first outline of the book was based an outline given to me by Scott Irwin, who has taught ACE 427 at the University of Illinois for years. 
 
 This book is targeted at the upper level undergraduate student, or professional beginning a career related to commodity markets. The objective is to familiarize the reader with the sources of market information and research commonly used by practicing professionals working in the industry.
