--- a/index.tex
+++ b/index.tex
@@ -193,7 +193,7 @@ Prices}
 
 \begin{document}
 \maketitle
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[frame hidden, boxrule=0pt, borderline west={3pt}{0pt}{shadecolor}, breakable, interior hidden, enhanced, sharp corners]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[boxrule=0pt, enhanced, sharp corners, interior hidden, frame hidden, borderline west={3pt}{0pt}{shadecolor}, breakable]}{\end{tcolorbox}}\fi
 
 \renewcommand*\contentsname{Table of contents}
 {
@@ -4517,7 +4517,7 @@ Response [https://downloads.usda.library.cornell.edu/usda-esmis/files/3t945q76s/
   Status: 200
   Content-Type: application/vnd.ms-excel
   Size: 326 kB
-<ON DISK>  C:\Users\mindy\AppData\Local\Temp\RtmpoBvCZl\file1f9c3fde23fb.xls
+<ON DISK>  C:\Users\mindy\AppData\Local\Temp\Rtmp6TIlBb\file9602c6d2abe.xls
 \end{verbatim}
 
 \begin{table}
@@ -6691,9 +6691,7 @@ soybean crushing plant. This spread is followed by industry participants
 as a gauge of profitability in the industry and as a signal of whether
 to expect expansion or contraction in the crush business.
 
-\includegraphics{16-TheSoybeanCrush_files/figure-pdf/unnamed-chunk-1-1.pdf}
-
-Source: \href{www.Quandl.com}{Quandl.com}
+\includegraphics{assets/SoyCrushSpread.png}
 
 \hypertarget{the-board-crush}{%
 \section{The Board Crush}\label{the-board-crush}}
